modify dockerfile and project name