@@ -1,27 +1,24 @@
-# FROM 10.241.60.7:8004/base/jdk:8u171
-#
-# USER root
-#
-# COPY --chown=bonree:bonree OpenRUM-collector.jar /data/br/jar/
-# COPY --chown=bonree:root entrypoint.sh /data/br/jar/
-# COPY --chown=bonree:root collector.env /data/br/conf/
-#
-# WORKDIR /data/br/jar
-# ENTRYPOINT ["bash", "/data/br/jar/entrypoint.sh"]
+FROM openjdk:8-jre
 
-FROM  openjdk:8
+WORKDIR /data/br
 
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} collector.jar
-ENTRYPOINT ["java","-jar","collector.jar"]
+COPY target/OpenRUM-collector.jar OpenRUM-collector.jar
 
+COPY target/classes/bootstrap.yml /data/br/conf/bootstrap.yml
 
+ENV JAVA_OPTS="\
+-server \
+-Xms2048m \
+-Xmx2048m \
+-XX:+UseG1GC \
+-XX:ParallelGCThreads=6 \
+-XX:InitiatingHeapOccupancyPercent=50 \
+-XX:+ClassUnloadingWithConcurrentMark \
+-XX:+ParallelRefProcEnabled \
+-XX:+UseStringDeduplication \
+-XX:+PrintGC \
+-XX:+HeapDumpOnOutOfMemoryError \
+-XX:HeapDumpPath=/data/br/logs/heapdump \
+-Xloggc:/data/br/logs/gc_collector.log"
 
-# 添加 Java 8 镜像来源
-#FROM  openjdk:8
-## 添加参数
-#ARG JAR_FILE
-## 添加 Spring Boot 包
-#ADD target/${JAR_FILE} app.jar
-## 执行启动命令
-#ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+ENTRYPOINT java ${JAVA_OPTS} -jar OpenRUM-collector.jar
